plugins {
	id "java"
	id "application"
	id "eclipse"
}

repositories {
	mavenCentral()
	maven {
		url "https://jitpack.io"
	}
	maven {
		url "https://raw.github.com/mcobject/perst/mvn-repo/"
	}
}

tasks.withType(JavaCompile) {
	options.release = 11
	options.encoding = "UTF-8"
}

application {
	mainClass = "org.spider.Main"
}

distZip {
	into(project.name) {
		from "."
		include "activelink.png"
		include "spider.properties"
		include "style.css"
	}
}

dependencies {
	implementation("org.slf4j:slf4j-api:2.0.3")
	implementation("org.slf4j:jul-to-slf4j:2.0.3");
	implementation("ch.qos.logback:logback-core:1.4.3")
	implementation("ch.qos.logback:logback-classic:1.4.3")
	implementation("org.jsoup:jsoup:1.15.3")
	implementation("org.xerial:sqlite-jdbc:3.39.3.0")
	implementation("com.github.Bombe:jFCPlib:v0.1.6")
	implementation("org.freemarker:freemarker:2.3.31")
	implementation("org.apache.commons:commons-text:1.10.0");
	implementation("org.apache.commons:commons-lang3:3.12.0");
	implementation("com.mcobject:com.mcobject.perst:1.3-SNAPSHOT");
	testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.1")
	testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.1")
}

test {
	useJUnitPlatform()
}
